Adiciona funcionalidade de adicionar/remover ponto do cartão
